--- a/styles/main.css
+++ b/styles/main.css
@@ -53,6 +53,7 @@ font-family:'Arial', sans-serif;font-size:16px}small{padding-bottom:1em}.row{wid
 .empty:after{clear:both}
 .content .screenshots img{width:100%},.header img{display:block}.col-4:after{clear:both}.col-4:last-child{margin-right:10px}.col-4 img{margin:0 auto}.col-4 p{margin:0em auto; margin-left:1em; margin-right:1em}
 .col-4 p span{font-size:4em;font-family: 'Arial', sans-serif; color:white;  letter-spacing: 3px; margin-bottom:8px; margin:auto}.fit { height:100%; width:auto; }
+.col-3 p span{font-size:4em;font-family: 'Arial', sans-serif; color:white;  letter-spacing: 3px; margin-bottom:8px; margin:auto}.fit { height:100%; width:auto; }
 
 
 
