--- a/styles/main.css
+++ b/styles/main.css
@@ -44,6 +44,8 @@ border: 1px solid white;
 p,small a{color:#7c9aae}.col-4:after,.col-4:before,.row:after,.row:before{content:'';display:table}.buy-on-steam,.buy-on-steam:hover,small a{text-decoration:none}.col-4,.content,
 .header{text-align:center}
 body{margin:0;background:url(../images/007.jpg) no-repeat fixed #000000;background-size:cover;background-position: top center;
+background-attachment: fixed;
+background-width:100%;
 -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -53,6 +55,24 @@ body{margin:0;background:url(../images/007.jpg) no-repeat fixed #000000;backgrou
     #parallax {
         background-attachment: scroll;
     }
+}
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px)  { 
+
+.supernova {
+
+    height: 100%;
+
+    background-repeat: no-repeat;
+
+    background-attachment: fixed !important;
+
+    background-position: center !important;
+
+    background-size: cover !important;
+
+}
+
 }
 
 font-family:'Arial', sans-serif;font-size:16px}small{padding-bottom:1em}.row{width:100%;margin:3em 0;border-collapse: collapse}
