--- a/styles/main.css
+++ b/styles/main.css
@@ -46,32 +46,12 @@ p,small a{color:#7c9aae}.col-4:after,.col-4:before,.row:after,.row:before{conten
 body{margin:0;background:url(../images/007.jpg)  #000000;background-position: top center;
 background-attachment: fixed;
 
--webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+-webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
 
-@media screen and (max-width: 992px) {
-    #parallax {
-        background-attachment: scroll;
-    }
-}
 
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px)  { 
-
-.supernova {
-
-    height: 100%;
-
-    background-repeat: no-repeat;
-
-    background-attachment: fixed !important;
-
-    background-position: center !important;
-
-    background-size: cover !important;
-
-}
 
 }
 
