--- a/styles/main.css
+++ b/styles/main.css
@@ -43,13 +43,13 @@ border: 1px solid white;
 
 p,small a{color:#7c9aae}.col-4:after,.col-4:before,.row:after,.row:before{content:'';display:table}.buy-on-steam,.buy-on-steam:hover,small a{text-decoration:none}.col-4,.content,
 .header{text-align:center}
-body{margin:0;background:url(../images/007.jpg)  #000000;background-position: top center;
+body{margin:0;background:url(../images/007.jpg) fixed #000000;background-position: top center;
 background-attachment: fixed;
 
 -webkit-background-size: 100%;
   -moz-background-size: 100%;
   -o-background-size: 100%;
-  background-size: 100%;
+  background-size: cover;
 
 
 
