--- a/styles/main.css
+++ b/styles/main.css
@@ -46,9 +46,9 @@ p,small a{color:#7c9aae}.col-4:after,.col-4:before,.row:after,.row:before{conten
 body{margin:0;background:url(../images/007.jpg) fixed #000000;background-position: top center;
 background-attachment: fixed;
 
--webkit-background-size: cover;
+-webkit-background-size: contain;
   -moz-background-size: cover;
-  -o-background-size: cover;
+  -o-background-size: contain;
   background-size: cover;
 
 
