--- a/styles/main.css
+++ b/styles/main.css
@@ -49,7 +49,8 @@ background-attachment: fixed;
 -webkit-background-size: contain;
   -moz-background-size: cover;
   -o-background-size: contain;
-  background-size: cover;
+  background-size: contain;
+ background-repeat: no-repeat;
 
 
 
