--- a/styles/main.css
+++ b/styles/main.css
@@ -51,10 +51,28 @@ background-attachment: fixed;
   -o-background-size: contain;
   background-size: cover;
  background-repeat: no-repeat;
-
+box-sizing: content-box;
 
 
 }
+
+
+.background-div {
+position: absolute;
+overflow: hidden;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+z-index: -1;
+}
+.background-div img {
+width: auto;
+height: auto;
+min-height: 100%;
+min-width: 100%;
+}
+
 
 font-family:'Arial', sans-serif;font-size:16px}small{padding-bottom:1em}.row{width:100%;margin:3em 0;border-collapse: collapse}
 .row:after{clear:both}
