--- a/styles/main.css
+++ b/styles/main.css
@@ -46,16 +46,21 @@ p,small a{color:#7c9aae}.col-4:after,.col-4:before,.row:after,.row:before{conten
 body{margin:0;background:url(../images/007.jpg) fixed #000000;background-position: top center;
 background-attachment: fixed;
 
--webkit-background-size: contain;
-  -moz-background-size: contain;
-  -o-background-size: contain;
+-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
  background-repeat: no-repeat;
+      height:100vh; // fix for mobile browser address bar appearing disappearing
+      z-index:-1; // needed to keep in the background
 
 }
 
 
 }
+
+
+
 
 html {
 height: 100vh; /* set viewport constraint */
