--- a/styles/main - Copia (3).css
+++ b/styles/main - Copia (3).css
@@ -6,10 +6,10 @@ p,small a{color:#ff0537}.buy-on-steam,.buy-on-steam:hover,small a{text-decoratio
 .table {
 width: 100%;
 border-collapse: collapse;
-border: 0px solid white;
+border: 1px solid white;
 }
 
-#table, td, th, tr {
+#table, td, th {
 
 
 	  height: 50px;
@@ -18,7 +18,6 @@ border: 0px solid white;
 	padding-left:10px;
 	padding-right:10px;
     text-align: left;
-	border: 1px solid white;
 
 }
 
@@ -89,11 +88,10 @@ font-family:'Arial', sans-serif;font-size:16px}small{padding-bottom:1em}.row{wid
 .row:after{clear:both}
 
 .col-4{float:left;clear:none;width:40%;margin-left:5%;margin-right:5%}.col-4 p span,
-.col-2{float:left;clear:none;width:49%;margin-left:0%;margin-right:0%;border:1px solid rgba(100, 100, 60, 0); border-collapse: collapse}.col-4 p span,
+.col-2{float:left;clear:none;width:49%;margin-left:0%;margin-right:0%;border:1px solid rgba(100, 100, 60, .5); border-collapse: collapse}.col-4 p span,
 .col-3{float:left;clear:none;width:23%;margin-left:5%;margin-right:5%}.col-3 p span,
 .empty:after{clear:both}
 .content .screenshots img{width:100%},.header img{display:block}
-.content .screenshots2 img{width:100%},.header img{display:block}
 .col-4:after{clear:both}.col-4:last-child{margin-right:10px}.col-4 img{margin:0 auto}.col-4 p{margin:0em auto; margin-left:1em; margin-right:1em}
 .col-3:after{clear:both}.col-3:last-child{margin-right:10px}.col-3 img{margin:0 auto}.col-3 p{margin:0em auto; margin-left:1em; margin-right:1em}
 
@@ -107,21 +105,18 @@ font-family:'Arial', sans-serif;font-size:16px}small{padding-bottom:1em}.row{wid
 .container{margin:auto; margin-top:30%}.header{box-sizing:border-box;
 
 overflow:hidden;padding:0px;margin-top:0px;margin-bottom:0px}.header iframe{width:640px;height:360px;
-margin-right:10px;float:left}.header img{margin:0 auto}.header .buy-container{padding-top:15px}.content{margin-bottom:2em}.content img{max-width:100%}.content .cta,.content .quotes,.content .screenshots{margin-bottom:30px}.content .quotes{padding-bottom:3em}.content .quotes p{margin-top:3em} .quotes p mine {font-style:italic; font-family: 'Renaissance-Antiqua', serif; color:white;  letter-spacing: 0px; font-size:1.2em}.content .cta .purchase-row{padding:30px 0 20px}.content #contact-email{display:block;margin-top:1em}.content .cta,.content .quotes,.content .,.conent .screenshots2,.content-bg,
+margin-right:10px;float:left}.header img{margin:0 auto}.header .buy-container{padding-top:15px}.content{margin-bottom:2em}.content img{max-width:100%}.content .cta,.content .quotes,.content .screenshots{margin-bottom:30px}.content .quotes{padding-bottom:3em}.content .quotes p{margin-top:3em} .quotes p mine {font-style:italic; font-family: 'Renaissance-Antiqua', serif; color:white;  letter-spacing: 0px; font-size:1.2em}.content .cta .purchase-row{padding:30px 0 20px}.content #contact-email{display:block;margin-top:1em}.content .cta,.content .quotes,.content .screenshots,.content-bg,
 .header{border:0px solid #ffffff;background:#f44277)}
 
 .header2{border:0px solid #ffffff;background:#f44277)}
-.bar{border-bottom:0px solid rgba(100, 100, 60, 0.3);background-color:rgba(25, 3, 3, 0.66); min-height:0px;}
-.info{border:1px solid rgba(100, 00, 0, 0);background-color:rgba(0, 0, 0, 0.95); margin:auto}
-.gradient{border-bottom:0px solid black;background:linear-gradient(rgba(0,0,0,0),rgba(010,100,0,0)); margin:auto}
-.white{border-bottom:0px solid #000000;background:linear-gradient(rgba(255,255,255,0),rgba(00,00,0,.95)); margin:auto}
-.screenshots{border-bottom:1px solid #56473B;background:#00000000; margin:auto; max-width:1200px}
-.screenshots2{border-bottom:0px solid #56473B;background:#00000000; margin:auto; max-width:1200px}
-.screenshots3{border-bottom:1px solid #56473B;background:#00000000; margin:auto; width:300px}
+.bar{border-bottom:1px solid rgba(100, 100, 60, .5);background-color:rgba(25, 3, 3, 0.66); min-height:0px;}
+.info{border:1px solid #000000;background-color:rgba(0, 0, 0, 0.9); margin:auto}
+.gradient{border-bottom:1px solid black;background:linear-gradient(rgba(0,0,0,0),rgba(00,00,0,1)); margin:auto}
+.white{border-bottom:1px solid #edd9a6;background:linear-gradient(rgba(255,255,255,0),rgba(200,200,180,1)); margin:auto}
+.screenshots{border:0px solid #56473B;background:#00000000; margin:auto; max-width:1200px}
 .photo{border:0px solid #56473B;background:rgba(255,255,255,0); margin:auto; max-width:666px;}
 .logo{border:0px solid #56473B;background:rgba(255,255,255,0); margin:auto; max-width:500px;}
 .paintings{border:0px solid #000000;background:rgba#000000; margin:auto; max-width:750px; margin-top:20px; margin-bottom:20px}
-.paintings2{border:0px solid #000000;background:rgba#000000; margin:auto; max-width:550px; margin-top:20px; margin-bottom:20px}
 
 {.header{margin-top:0;width:100%}.header iframe{width:100%;float:none}.header 
 .info {margin-top:0em}
@@ -152,32 +147,6 @@ p.bright {
 	font-size: 20px;
 	color:#edd9a6;
 	margin-top:5px;
-	font-family: 'Renaissance-Antiqua';
-}
-
-p.bright4 {
-    
-	font-size: 20px;
-	color:#f44250;
-	margin-top:5px;
-	font-family: 'Renaissance-Antiqua';
-}
-
-p.redsmall {
-    
-	font-size: 17px;
-	color:#f44250;
-	margin-top:5px;
-	font-family: 'Renaissance-Antiqua';
-}
-
-p.bright3 {
-    
-	font-size: 30px;
-	color:#edd9a6;
-	margin-top:40px;
-	margin-bottom:10px;
-	font-family: 'Renaissance-Antiqua';
 }
 
 
@@ -190,19 +159,16 @@ p.red {
 
 p.bigred {
     
-	font-size: 28px;
+	font-size: 18px;
 	color:#f44250;
 	margin-top:30px;
-	font-family: 'Renaissance-Antiqua';
-	letter-spacing: 0.3em;
 }
 
 p.normal {
     
-	font-size: 17px;
-	color:#edd9a6;
+	font-size: 16px;
+	color:#ceccca;
 	margin-top:5px;
-	font-family: 'Renaissance-Antiqua';
 }
 
 p.bright2 {
@@ -236,7 +202,7 @@ p.menu {
 
 
 a.title:link {
-	color:#edd9a6;
+    color: #FF0940;
 	font-family: 'Renaissance-Antiqua', serif; letter-spacing: 3px; margin-bottom:8px;
 	font-size:22px;
 }
@@ -254,7 +220,7 @@ a.title:hover {
 }
 
 a.item:link {
-	color:#edd9a6;
+    color:#7c9aae;
 	text-decoration: none;
 }
 
@@ -270,7 +236,7 @@ a.item:hover {
 
 
 
-#containerb { margin-left:0px; margin-top:12px; color:black; f15:25 29/12/2016; font-family: Verdana; max-width:880px; background-color:#ffffff; border: 0px solid #bdbcb8}
+#containerb { margin-left:0px; margin-top:12px; color:black; f15:25 29/12/2016; font-family: Verdana; max-width:880px; background-color:#ffffff; border: 1px solid #bdbcb8}
 #containerb ul{ padding-left:300px}
 #containerb ul li{float:left; color:#949494; font-family: Verdana}
 
