--- a/styles/main.css
+++ b/styles/main.css
@@ -104,7 +104,7 @@ font-family:'Arial', sans-serif;font-size:16px}small{padding-bottom:1em}.row{wid
 
 .testheader{border:0px solid #ffffff;background:#f44277;background:url(../roguemance/backgroundBig.png)}
 
-.container{margin:auto; margin-top:30%}.header{box-sizing:border-box;
+.containerLucas{margin:auto; margin-top:30%}.header{box-sizing:border-box;
 
 overflow:hidden;padding:0px;margin-top:0px;margin-bottom:0px}.header iframe{width:640px;height:360px;
 margin-right:10px;float:left}.header img{margin:0 auto}.header .buy-container{padding-top:15px}.content{margin-bottom:2em}.content img{max-width:100%}.content .cta,.content .quotes,.content .screenshots{margin-bottom:30px}.content .quotes{padding-bottom:3em}.content .quotes p{margin-top:3em} .quotes p mine {font-style:italic; font-family: 'Renaissance-Antiqua', serif; color:white;  letter-spacing: 0px; font-size:1.2em}.content .cta .purchase-row{padding:30px 0 20px}.content #contact-email{display:block;margin-top:1em}.content .cta,.content .quotes,.content .,.conent .screenshots2,.content-bg,
@@ -120,7 +120,7 @@ margin-right:10px;float:left}.header img{margin:0 auto}.header .buy-container{pa
 .screenshots3{border-bottom:1px solid #56473B;background:#00000000; margin:auto; width:300px}
 .photo{border:0px solid #56473B;background:rgba(255,255,255,0); margin:auto; max-width:666px;}
 .logo{border:0px solid #56473B;background:rgba(255,255,255,0); margin:auto; max-width:500px;}
-.paintings{border:0px solid #000000;background:rgba#000000; margin:auto; max-width:750px; margin-top:20px; margin-bottom:20px}
+.paintings{border:0px solid #000000;background:rgba#000000; margin:auto; max-width:800px; margin-top:20px; margin-bottom:20px}
 .paintings2{border:0px solid #000000;background:rgba#000000; margin:auto; max-width:550px; margin-top:20px; margin-bottom:20px}
 
 {.header{margin-top:0;width:100%}.header iframe{width:100%;float:none}.header 
@@ -307,3 +307,9 @@ html, body {
 overflow-x: hidden;
     max-width: 100%;
 }
+
+
+
+.mySlides {display:none}
+.w3-left, .w3-right, .w3-badge {cursor:pointer}
+.w3-badge {height:13px;width:13px;padding:0}
