--- a/styles/main.css
+++ b/styles/main.css
@@ -61,7 +61,31 @@ background-attachment: fixed;
 }
 
 
+.rowFlex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 100%;
+}
 
+.columnFlex{
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+.columnFlex2{
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  vertical-align: middle;
+  horizontal-align: middle;
+   display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
 
 html {
 height: 100vh; /* set viewport constraint */
@@ -84,11 +108,19 @@ min-height: 100%;
 min-width: 100%;
 }
 
+.img{
+	max-width: 10%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+}
+
 
 font-family:'Arial', sans-serif;font-size:16px}small{padding-bottom:1em}.row{width:100%;margin:3em 0;border-collapse: collapse}
 .row:after{clear:both}
 
-.col-4{float:left;clear:none;width:40%;margin-left:5%;margin-right:5%}.col-4 p span,
+.col-4{  max-width: 100%;
+  max-height: 100%;float:left;clear:none;width:40%;margin-left:5%;margin-right:5%}.col-4 p span,
 .col-2{float:left;clear:none;width:49%;margin-left:0%;margin-right:0%;border:1px solid rgba(100, 100, 60, 0); border-collapse: collapse}.col-4 p span,
 .col-3{float:left;clear:none;width:23%;margin-left:5%;margin-right:5%}.col-3 p span,
 .empty:after{clear:both}
